<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrainerHomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:text="@string/v_lg_tabel" />

        <Spinner
            android:id="@+id/spinnerTableTr"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:orderInCategory="100"
            android:showAsAction="never" />

    </LinearLayout>

    <Button
        android:id="@+id/TrainB1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/tr_n_1"></Button>

    <Button
        android:id="@+id/TrainB2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/tr_n_2"></Button>

    <Button
        android:id="@+id/TrainB3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/tr_n_3"></Button>



</LinearLayout>