<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Trainer4Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/statusTr4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:text="" />
        <TextView
            android:id="@+id/Tr4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="#00ccff"
            android:shadowRadius="2"
            android:gravity="center"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textSize="30sp"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <com.hfad.tabletrainer.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">
    </com.hfad.tabletrainer.GameView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonLeft4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="Til venstre"/>
        <Button
            android:id="@+id/buttonRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="Til højre"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonStartTr4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/start"/>
        <Button
            android:id="@+id/buttonStopTr4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/stop"/>
        <Button
            android:id="@+id/buttonBackTr4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/tilbage"/>
    </LinearLayout>



</LinearLayout>