<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Trainer1Fragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/statusTr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:text="" />
        <TextView
            android:id="@+id/statusAnsvTr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="" />
        <TextView
            android:id="@+id/Tr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="#00ccff"
            android:shadowRadius="2"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textSize="30sp"
            android:gravity="center"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/inputAnsw1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:gravity="center"
            android:digits="1,2,3,4,5,6,7,8,9,0,+"
            android:hint="svar 1"
            android:layout_weight="1"
            android:inputType="text"
            android:background="@drawable/edit_text_style"/>
        <EditText
            android:id="@+id/inputAnsw2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:gravity="center"
            android:digits="1,2,3,4,5,6,7,8,9,0,+"
            android:hint="svar 2"
            android:layout_weight="1"
            android:inputType="text"
            android:background="@drawable/edit_text_style"/>
        <EditText
            android:id="@+id/inputAnsw3"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:gravity="center"
            android:digits="1,2,3,4,5,6,7,8,9,0,+"
            android:hint="svar 3"
            android:layout_weight="1"
            android:inputType="text"
            android:background="@drawable/edit_text_style"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonContr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/tjek"/>
        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/n_ste"/>
        <Button
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/tilbage"/>
    </LinearLayout>
</LinearLayout>